--- a/UniDiamond/test-output/old/Suite/methods-not-run.html
+++ b/UniDiamond/test-output/old/Suite/methods-not-run.html
@@ -1,6 +1,8 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>tests.CriticalSheetTest.verifyUniDiscountShouldNotShowAfterAddTheQC</td></tr>
-<tr><td>tests.CriticalSheetTest.verifyAddingMultipleStoneUsingQuickSearch</td></tr>
-<tr><td>tests.CriticalSheetTest.VerifyPriceOnAllMediaIconsForEveryPage</td></tr>
-<tr><td>tests.CriticalSheetTest.verifyThePricesWithMarkupForRetailerUser</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyReturnTheMemoStone</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateBidOfferWithSingleStoneAndAcceptFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateBidOfferWithSingleStoneAndRejectFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.VerifyAddQcAndCreateOrderWithQCAndNonQCStone</td></tr>
 </table>
