--- a/UniDiamond/test-output/old/Default suite/methods.html
+++ b/UniDiamond/test-output/old/Default suite/methods.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9295b0">  <td>25/12/26 16:04:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;setup</td> 
+<tr bgcolor="9295b0">  <td>26/01/28 15:35:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/12/26 16:04:24</td>   <td>1704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneIdsFromDb()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;getStoneIdsFromDb</td> 
+<tr bgcolor="bbb094">  <td>26/01/28 15:35:45</td>   <td>1961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneIdsFromDb()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;getStoneIdsFromDb</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/12/26 16:04:30</td>   <td>7335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriceTest.verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup()[pri:2, instance:tests.PriceTest@eadd4fb]">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup</td> 
+<tr bgcolor="bbb094">  <td>26/01/28 15:35:50</td>   <td>6088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriceTest.verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithoutUniMarkup()[pri:1, instance:tests.PriceTest@eadd4fb]">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithoutUniMarkup</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/12/26 16:05:08</td>   <td>45659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PriceTest@eadd4fb]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9295b0">  <td>26/01/28 15:36:27</td>   <td>43875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PriceTest@eadd4fb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="9295b0">  <td>26/01/28 15:36:28</td>   <td>43990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="bbb094">  <td>26/01/28 15:36:29</td>   <td>45007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneIdsFromDb()[pri:0, instance:tests.PriceTest@eadd4fb]">&gt;&gt;getStoneIdsFromDb</td> 
+<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="bbb094">  <td>26/01/28 15:36:32</td>   <td>48287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriceTest.verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup()[pri:2, instance:tests.PriceTest@eadd4fb]">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup</td> 
+  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="9295b0">  <td>26/01/28 15:37:08</td>   <td>84457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PriceTest@eadd4fb]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
 </table>
