--- a/UniDiamond/test-output/old/Suite/classes.html
+++ b/UniDiamond/test-output/old/Suite/classes.html
@@ -4,30 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.CriticalSheetTest</td>
+<td>tests.WednesdaySheetTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUniDiscountShouldNotShowAfterAddTheQC</td>
+<td>verifyCreateBidOfferWithSingleStoneAndRejectFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserIsNotAbleToPlaceBidOfferForTheQcStone</td>
+<td>VerifyAddQcAndCreateOrderWithQCAndNonQCStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddingMultipleStoneUsingQuickSearch</td>
+<td>verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyPriceOnAllMediaIconsForEveryPage</td>
+<td>verifyCreateBidOfferWithSingleStoneAndAcceptFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyThePricesWithMarkupForRetailerUser</td>
+<td>verifyBuyTheMemoStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyReturnTheMemoStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
